--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Final Project JS from IT Park University",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd ./test && npm i || true",
+    "test": "cd ./tests && npm run tes  t",
+    "build": "echo \"Dummy build script for Autocode\"",
     "compile": "node-sass --watch src/styles/style.scss src/dist/style.css"
   },
   "repository": {
