Add z-index to button styles and update package.json with new compile and start scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "cd ./test && npm i || true",
     "test": "cd ./tests && npm run tes  t",
     "build": "echo \"Dummy build script for Autocode\"",
-    "compile": "node-sass --watch src/styles/style.scss src/dist/style.css"
+    "compile": "node-sass src/styles/style.scss src/dist/style.css",
+    "start": "npx browser-sync start --server 'src' --files 'src/**/*.*'",
+    "prod": "npm run compile && npm run start"
   },
   "repository": {
     "type": "git",
@@ -15,7 +17,7 @@
   },
   "author": "yusufbek_orzibekov",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^3.0.3"
+  "dependencies": {
+    "node-sass": "^9.0.0"
   }
 }
