--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "yusufbek_orzibekov",
   "license": "ISC",
   "dependencies": {
+    "final-project-js": "file:",
     "node-sass": "^9.0.0"
   }
 }
